--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -12,22 +12,21 @@
 
 @media screen and (min-width: 768px){
     .cover__overlay {
-        min-width: 768px;
+        min-width: calc(768px - 1vh);
         min-height: 480px;
-        margin: 0 auto;
     }
 }
 
 @media screen and (min-width: 1024px){
     .cover__overlay {
-        min-width: 1024px;
+        min-width: calc(1024px - 5vw);
         min-height: 640px;
     }
-}
+} 
 
 @media screen and (min-width: 1280px){
     .cover__overlay {
-        max-width: 1280px;
+        max-width: 1184px;
         max-height: 740px;
     }
 }
