--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -8,8 +8,6 @@
     text-align: center;
     color: #fff;
     min-width: 288px;
-    position: relative;
-    z-index: 2;
 }
 
 @media screen and (min-width:768px){
