--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -14,7 +14,7 @@
     .intro {
         padding-bottom: 88px;
         padding-left: 24px;
-        min-width: 768px;
+        min-width: calc(768px - 24px);
     }
 }
 
@@ -22,7 +22,7 @@
     .intro {
         padding-bottom: 92px;
         padding-left: 48px;
-        min-width: 1024px;
+        min-width: calc(1024px - 48px);
     }
 }
 
@@ -30,6 +30,6 @@
     .intro {
         padding-bottom: 92px;
         padding-left: 148px;
-        max-width: 1280px;
+        max-width: calc(1280px - 148px);
     }
 }
