--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -17,12 +17,12 @@
 @media screen and (min-width: 1024px){
     .lead {
         padding-bottom: 92px;
-        min-width: 1024px;
+        min-width: calc(1024px - 92px);
     }
 }
 
 @media screen and (min-width: 1280px){
     .lead {
-        max-width: 1280px;
+        min-width: calc(1280px - 92px)
     }
 }
