--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -15,7 +15,7 @@
         padding-top: 88px;
         padding-bottom: 90px;
         padding-left: 24px;
-        min-width: 768px;
+        min-width: calc(768px - 24px);
     }
 }
 
@@ -24,7 +24,7 @@
         padding-top: 92px;
         padding-bottom: 92px;
         padding-left: 48px;
-        min-width: 1024px;
+        min-width: calc(1024px - 48px);
     }
 }
 
@@ -33,6 +33,6 @@
         padding-top: 88px;
         padding-bottom: 90px;
         padding-left: 148px;
-        max-width: 1280px;
+        max-width: calc(1280px - 148px);
     }
 }
